Fix: Fix bug where bottom of page would get cut off by footer bar on shorter screens, update readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,7 @@ main {
     margin: 20px auto;
     position: relative;
     top: 50px;
+    padding-bottom: 100px;
 }
 
 #contact-form input[type="text"], #contact-form input[type="email"] {
